@@ -5,6 +5,6 @@ AUX wrapper1.conf 1792 RMD160 9223ed3fd640840021294ef0302ee1e15501f5f9 SHA1 d5dc
 DIST freenet-0.7_p1155.tar.bz2 2112880 RMD160 a1f6b80820b0e295ebb2ba18360af1d54351218a SHA1 6dea82cd63a1db8e97a03f03154c68da85106a0c SHA256 095a2bc04c4886455780fbfbb7940446f90dabff28c028c57997ae6394a1f6d4
 DIST seednodes-20080721.fref 37077 RMD160 4b7aca1d3864a42f4bbece5cf7d9b410888feebe SHA1 93fa0bbae17e15cbf073ad9da9070de023c265f5 SHA256 37f075bc40611f0db15e3e5012aebbd6a14775f2a70e90ab7838b5f91fa42ac1
 EBUILD freenet-0.7_p1155-r1.ebuild 3197 RMD160 affcb9a57ac75e6d8fc720ae15c4d6bd8162438e SHA1 80781881c3cce67c08632557a3159a16bdc2cc51 SHA256 44529a2e5038e59c6e268a572a085bb05105b26590139b99b22e6ed6f6fa48c2
-EBUILD freenet-9999-r1.ebuild 3421 RMD160 d4e38a8de26a7bce4f2a9b6cc31fd7d238cd33db SHA1 1bb2200522e88247c5cf1e62f7debe9e546d2199 SHA256 d9908ad1c6562d37af06bb8ccf86a7380c790eeffc19e075534d5f26b279bf1a
-MISC ChangeLog 11785 RMD160 03d25034d41d82e173198a66ea9cfb235f0e324e SHA1 bf0ac6c1d146a1df4428640a3928a9541bd2accf SHA256 5c6c192c1934429d9ca53eace9bce1b59460ec7e26e0185f31bdeb9ed46c7c76
+EBUILD freenet-9999-r1.ebuild 3473 RMD160 3445c26cf08c89e0ad23d8c93ce13e2f061dcb4f SHA1 c62db745fcf58648667d38245740155cde2a1ec0 SHA256 ae795c2913aa8c695ca971802c037b5a0f4a1d6d867a786675a80d1dbf0bdbae
+MISC ChangeLog 11895 RMD160 4de818cddb20b38061d2fad48ba8e4668d863af2 SHA1 503b9435d8a0d7e86920135d2c036a6f5fc2f29a SHA256 5a2122d4c4cddec0c60e15772b8f476ba06df28b52d14efc96ffdf6f5ee235df
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
