@@ -3,6 +3,10 @@
 # $Header: $
 
   10 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  freenet-9999-r1.ebuild:
+  Fix truncated strings
+
+  10 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   -files/wrapper.conf.patch:
   Delete obsolete patch
 
